fix(rules): allow empty LCOV reports